Diodenlaser Korrektur von Durchführung, Auswertung und Diskussion

--- a/Diodenlaser/content/auswertung.tex
+++ b/Diodenlaser/content/auswertung.tex
@@ -38,7 +38,7 @@ So können die Peaks von links nach rechts den Übergängen 87a, 85a, 85b, 87b z
 
 \begin{figure}
     \centering
-    \includegraphics[width= \textwidth]{plots/Fluoreszenz_1.jpg}
+    \includegraphics[width= 0.7\textwidth]{plots/Fluoreszenz_1.png}
     \caption{Bild der Radiumfluoriszenz.}
     \label{fig:2}
 \end{figure}
