Korrektur Dipolrelaxation Auswertung

--- a/Dipolrelaxation/content/auswertung.tex
+++ b/Dipolrelaxation/content/auswertung.tex
@@ -16,9 +16,9 @@ Daraus ergeben sich die Parameter:
 
 \begin{align*}
     &\text{Messung 1:}\\
-    & a = 0.49 \pm 0.32 \,A    &&  b = 3634.88 \pm 187.06 \,K    &&  c = -2.38 \pm 0.16 \cdot 10^{-9}\,A \\
+    & a = (0.49 \pm 0.32) \,A    &&  b = (3634.88 \pm 190) \,K    &&  c = (-2.38 \pm 0.16 )\,A \\
     &\text{Messung 2:}\\
-    & a = 0.09 \pm 0.04 \,A    &&  b = 3067.80 \pm 136.59 \,K    &&  c = -2.72 \pm 0.23 \cdot 10^{-9}\,A \\
+    & a = (0.09 \pm 0.04) \,A    &&  b = (3067.80 \pm 140) \,K    &&  c = (-2.72 \pm 0.23 )\,A \\
 \end{align*}
 Diese Fits sind ebenfalls in Abbildung \ref{fig:1} zu sehen.
 Um das Signal mit reduziertem Untergrund zu erhalten, wird nun der gefittete Untergrund von den Messwerten subtrahiert.
@@ -68,7 +68,7 @@ Diese Heizrate wird durch Formel \ref{equ:A1} bestimmt.
     b = \frac{1}{n-1} \sum_{i=1}^{n} \frac{T_i - T_{i-1}}{\SI{1}{\minute}}
     \label{equ:A1}
 \end{equation}
-Für die erste Messreihe folgt eine Heizrate von $b_1 = 1.58 \pm 0.19 \,\frac{\text{K}}{\text{min}}$ und für die Zweite $b_2 = 1.90 \pm 0.25 \,\frac{\text{K}}{\text{min}}$.
+Für die erste Messreihe folgt eine Heizrate von $b_1 = (1.58 \pm 0.19) \,\frac{\text{K}}{\text{min}}$ und für die Zweite $b_2 = (1.90 \pm 0.25) \,\frac{\text{K}}{\text{min}}$.
 
 
 
@@ -88,9 +88,9 @@ Die ermittelten Werte sind:
 
 \begin{align*}
     &\text{Messung 1:}\\
-    & m = -10620.99 \pm 604.32 \,T    &&  n = 45.25 \pm 2.44   \\
+    & m = (-10620.99 \pm 600) \,T    &&  n = 45.25 \pm 2.44   \\
     &\text{Messung 2:}\\
-    & m = -10195.23 \pm 557.63 \,T    &&  n = 33.56 \pm 4.26   \\
+    & m = (-10195.23 \pm 560) \,T    &&  n = 33.56 \pm 4.26   \\
 \end{align*}
 Die Ausgleichsgeraden sind in Abbildung \ref{fig:3} abgebildet.
 Aus der Gleichung 
@@ -102,9 +102,9 @@ ergibt sich die Aktivierungsenergie zu
 
 \begin{align*}
     &\text{Messung 1:}\\
-    & W = 0.92 \pm 0.05 \,eV  \\
+    & W = (0.92 \pm 0.05) \,eV  \\
     &\text{Messung 2:}\\
-    & W = 0.88 \pm 0.05 \,eV.  \\
+    & W = (0.88 \pm 0.05) \,eV.  \\
 \end{align*}
 
 \begin{figure}
@@ -135,13 +135,13 @@ Bei der Integralmethode wird nach Gleichung \ref{equ:2}, $\frac{1}{T}$ gegen $\t
 \end{equation}
 durchgeführt.
 Diese Ausgleichgeraden sind in Abbildung \ref{fig:4} zu finden.
-Mit Hilfe von \ref{equ:A2} wird dir Aktivierungsenergie W berechnet.
+Mit Hilfe von \eqref{equ:A2} wird dir Aktivierungsenergie W berechnet.
 
 \begin{align*}
     &\text{Messung 1:}\\
-    & W = 0.72 \pm 0.10 \,eV \\
+    & W = (0.72 \pm 0.10) \,eV \\
     &\text{Messung 2:}\\
-    & W = 0.69 \pm 0.09 \,eV  \\
+    & W = (0.69 \pm 0.09) \,eV  \\
 \end{align*}
 
 \begin{figure}
