--- a/Dipolrelaxation/content/diskussion.tex
+++ b/Dipolrelaxation/content/diskussion.tex
@@ -20,7 +20,7 @@ Ein Teil der Abweichungen zwischen Messung und Literatur kann durch die hohe Emp
       \toprule
       &\multicolumn{2}{c}{Methode 1} &\multicolumn{2}{c}{Methode 2}\\
       \cmidrule(lr){2-3}\cmidrule(lr){4-5}
-                   &$W \, / \, \si{\electronvolt}$  &$\tau \, / \, \si{\second}$ & $W \, / \, \si{\electronvolt}$    & $\tau \, / \, \si{\minute}$   \\
+                   &$W \, [\si{\electronvolt}$]  &$\tau \, [\si{\second}$] & $W \, [\si{\electronvolt}$]    & $\tau \, [\si{\minute}$]   \\
       \midrule
       Messung 1    & $0.92 \pm 0.05$              & $(4 \pm 10) \cdot 10^{-16}$    & $0.72 \pm 0.10$                 & $(2.82 \pm 12.62) \cdot 10^{-12}$  \\   
       Messung 2    & $0.88 \pm 0.05$              & $(3 \pm 0.65) \cdot 10^{-16}$  & $0.69 \pm 0.09$                 & $(19.45 \pm 83.32) \cdot 10^{-12}$  \\   
