--- a/Dipolrelaxation/header.tex
+++ b/Dipolrelaxation/header.tex
@@ -135,5 +135,6 @@
   \href{mailto:jannis.vornholt@udo.edu}{jannis.vornholt@udo.edu}%
 }
 
+\date{23. October 2023}
 
 \publishers{TU Dortmund University – Department of Physics}
