--- a/Interferometrie/lit.bib
+++ b/Interferometrie/lit.bib
@@ -4,3 +4,19 @@
   url = {http://www.chemie.de/lexikon/Brechzahl.html},
   urldate = {2022-04-13}
 }
+@book{Hecht_2018,
+url = {https://doi.org/10.1515/9783110526653},
+title = {Optik},
+author = {Eugene Hecht},
+publisher = {De Gruyter},
+address = {Berlin, Boston},
+doi = {doi:10.1515/9783110526653},
+isbn = {9783110526653},
+year = {2018},
+lastchecked = {2024-01-25}
+}
+@manual{V64,
+title = {V64 Interferometry},
+year = {2023},
+organization = {Fakultät Physik, TU Dortmund}
+}
