--- a/Interferometrie/content/theorie.tex
+++ b/Interferometrie/content/theorie.tex
@@ -34,7 +34,7 @@ I \propto \bigl<|E_1\cos(wt)+E_2\cos(wt+\delta)|^2\bigr>
 Assuming a phase difference of $\delta_{max}=n2\pi$ for complete constructive interference at the maximum and $\delta_{min}=(2n+1)\pi$ with $n\epsilon N^0$ for destructive interference at the minimum and consequently using $\cos(wt+\delta_{max})=\cos(wt)$ and $\cos(wt+\delta_{min})=-\cos(wt)$ the corresponding intensities can be calculated:
 \begin{gather*}
 I_{max/min}\propto \bigl<\cos^2(wt)(E_1\pm E_2)^2\bigr> \\
-\iff I_{max/min}\propto (E_1^2\pm 2E_1E_2 + E_2^2 
+\iff I_{max/min}\propto E_1^2\pm 2E_1E_2 + E_2^2 
 \end{gather*}
 The strengths of the electric fields $E_1$ and $E_2$ is determined by the polarisation angle $\Phi$ of the initial light beam with the electric field strength $E_0$ before beeing split by the beam-splitter cube:
 \begin{equation*}
