--- a/Interferometrie/content/diskussion.tex
+++ b/Interferometrie/content/diskussion.tex
@@ -4,13 +4,14 @@
 The measured values and the results obtained are in line with the expectations.
 An overview of the determined and theoretical values, as well as the respective deviation, can be found in table \autoref{tab:ergebnisübersicht}.
 The determined contrasts follow the expected distribution and no major deviations are recognizable.
+Nevertheless, the contrast is not perfect. 
+This could be due to the imperfect alignment of the Sagnac-interferometer, which prevents the intensity from dropping to zero at a minimum.
 As expected, the extremes can also be found at multiples of $45°$.
 
 For the refractive index of glass, $n_\text{glass} = 1.64 \pm 0.13 $ was determined.
 The theoretical value is $n_\text{glass, theo} = 1.45$ \cite{Brechungsindex}.
 The determined value therefore has a deviation of $\SI{13.10}{\percent}$.
-One reason for this slightly higher deviation may lie in the way the experiment was carried out.
-Here, the intensity maxima and minima were only recorded with one diode instead of two.
+One reason for this slightly higher deviation may be due to the different measurement method which seems to be less precise.
 
 The theoretical value for air is $n_\text{air, theo} = 1.000292$ \cite{Brechungsindex}.
 Averaged over all measurement series, the refractive index of air in a standard atmosphere is $n_\text{air} =  1.0002795 \pm 0.0000009 $, which represents a 
