--- a/Interferometrie/main.tex
+++ b/Interferometrie/main.tex
@@ -3,9 +3,9 @@
 \subject{V64}
 \title{Interferometry}
 \date{%
-  Durchführung: DATUM
+  Durchführung: 15. January 2024
   \hspace{3em}
-  Abgabe: DATUM
+  Abgabe: 29. January 2024
 }
 
 \begin{document}
