--- a/Myonen/content/theorie.tex
+++ b/Myonen/content/theorie.tex
@@ -1,9 +1,9 @@
 \section{Theorie}
 \label{sec:Theorie}
 
-\subsection{Zielsetzung}
-Ziel des Versuches ist es, die Lebensdauer kosmischer Myonen zu bestimmen. 
-Zudem soll die dafür verwendete Schaltung genauer untersucht werden.
+%\subsection{Zielsetzung}
+%Ziel des Versuches ist es, die Lebensdauer kosmischer Myonen zu bestimmen. 
+%Zudem soll die dafür verwendete Schaltung genauer untersucht werden.
 
 
 \subsection{Entstehung und Zerfall kosmischer Myonen}
