--- a/Myonen/main.tex
+++ b/Myonen/main.tex
@@ -13,8 +13,9 @@
 \newpage
 
 \tableofcontents
-\newpage
 
+\newpage
+\setcounter{page}{1}
 
 \input{content/theorie.tex}
 \input{content/durchfuehrung.tex}
